--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "author": "Terrence Reilly <reill1tp@cmich.edu>",
   "license": "MIT",
   "dependencies": {
-    "generator-latex-homework": "^0.0.3"
+    "generator-latex-homework": "^0.0.4",
+    "yo": "^1.8.5"
   }
 }
